image problem resolved(syncronized)